--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,11 @@
     color: #FFFFFF;
     font-family: 'Courier New', Courier, monospace;
 }
-
 body {
     background-color: rgb(50, 50, 50);
+}
+titleCustom{
+    font-size: 18px;
+    font-weight: 700;
+    font-style: italic;
 }
